# intraday-edge-engine

./: .env.example  .gitignore  Dockerfile  MORNING_HANDOFF.md  NEXT_STEPS.md  PLAN.md  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run-with-tunnel.sh  run.sh
config/: risk.yaml  settings.yaml
dashboard/: app.py
data/models/: signal_model.json
docs/: EDGE_EXPERIMENTS_FINDINGS.md  EDGE_ROADMAP.md  EOD_ANALYSIS_2026-06-25.md  IMPROVEMENT_PLAN.md  PEAD_FINDINGS.md  RESEARCH_HANDOFF.md  SIGNAL_RESEARCH_FINDINGS.md  SWING_RESEARCH_FINDINGS.md
scripts/: overnight.sh
signal_engine/: __init__.py  cli.py  config.py  factory.py  scheduler.py
signal_engine/alerts/: __init__.py  base.py  callmebot.py  console.py  null.py  telegram.py  whatsapp.py
signal_engine/analytics/: __init__.py  paper.py
signal_engine/api/: __init__.py  app.py  serializers.py
signal_engine/backtest/: __init__.py  archive.py  engine.py  metrics.py  walkforward.py
signal_engine/brokers/: __init__.py  angelone.py  base.py  dhan.py  dhan_auth.py  dhan_ws.py  mock.py  yahoo_nse.py
signal_engine/data/: __init__.py  backfill.py  synthetic.py  yahoo_batch.py
signal_engine/domain/: __init__.py  enums.py  models.py
signal_engine/engine/: __init__.py  advisor.py  runner.py
signal_engine/health/: __init__.py  scorer.py
signal_engine/indicators/: __init__.py  core.py
signal_engine/ingestion/: __init__.py  aggregator.py  shards.py  tick_recorder.py
signal_engine/market/: __init__.py  calendar.py  clock.py  session.py
signal_engine/ml/: __init__.py  base.py  dataset.py  evaluate.py  features.py  model.py  scorer.py  train.py
signal_engine/news/: __init__.py  features.py  mapper.py  models.py  overlay.py  provider.py  rss.py  sentiment.py
signal_engine/obs/: __init__.py  (+3 more)
tests/: test_advisor.py  test_aggregator.py  test_angelone.py  test_api.py  test_archive_backtest.py  test_backfill.py  test_backtest.py  test_calendar.py  test_callmebot.py  test_costs.py  test_cues.py  test_dhan.py  test_dhan_auth.py  test_dhan_ws.py  test_engine.py  test_filter.py  test_health.py  test_indicators.py  test_mapper.py  test_metrics.py  test_ml_dataset.py  test_ml_eval.py  test_ml_features.py  test_ml_model.py  test_ml_train.py  test_news_features.py  test_news_overlay.py  test_nse_universe.py  test_obs.py  test_paper_analytics.py  test_paper_trader.py  test_premarket.py  test_premarket_scoring.py  test_premarket_validation.py  test_ranking.py  test_real_harness.py  test_repository.py  test_risk.py  test_rss.py  test_safety.py  (+14 more)
web/: .env.local.example  .gitignore  README.md  package-lock.json  package.json
(+63 files in other folders)
